Hide overflow to fix height of the slider.

--- a/sites/all/themes/custom/devsigner/sass/components/_home.scss
+++ b/sites/all/themes/custom/devsigner/sass/components/_home.scss
@@ -65,6 +65,7 @@
 
       .view-content {
         max-height: 700px;
+        overflow: hidden;
       }
 
       .flexslider {
